# game_gl

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  configure.sh
assets/: main.frag  main.vert  post_process.frag  post_process.vert  post_process2.comp
glad/include/glad/: gl.h
src/: main.cpp
src/game/: exception.cpp  exception.hpp  game.cpp  game.hpp  render.cpp  render.hpp  stbimpl.cpp
src/game/render/: post_process_stack.cpp  post_process_stack.hpp  render.cpp  render.hpp  render_target.cpp  render_target.hpp
